--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nz-layout class="h-screen overflow-hidden" >
-  <!-- @if (!(router.url.includes("register") || router.url.includes("login"))) { -->
   <nz-sider
     class="hidden sm:block text-black dark:text-white"
     nzCollapsible
     [(nzCollapsed)]="isCollapsed"
+    nzTheme="light"
     [nzTrigger]="null"
   >
     <div class="logo"><app-logo/></div>
@@ -19,6 +19,7 @@
     [nzVisible]="visible"
     [nzPlacement]="'left'"
     [nzTitle]="logo"
+    [nzTitle]="'Store Management'"
     (nzOnClose)="close()"
     [nzCloseOnNavigation]="true"
     [nzWrapClassName]="'flex'"
@@ -28,15 +29,10 @@
   >
     <ng-container *nzDrawerContent>
       <app-nav-bar/>
-      <nz-footer>
-        <nz-switch [(ngModel)]="switchValue"></nz-switch>
-      </nz-footer>
     </ng-container>
   </nz-drawer>
-  <!-- } -->
   <nz-layout class="overflow-hidden h-full w-full grid grid-rows-12">
     <nz-header [classList]="' bg-white flex justify-between items-center px-4'">
-      <!-- @if (!(router.url.includes("register") || router.url.includes("login"))) { -->
       <div class="flex flex-col my-2">
         <h5 class="sm:hidden block p-2">
           <button nz-button class="drawer" (click)="open()">
@@ -70,8 +66,5 @@
     >
       <div class="h-full"><router-outlet /></div>
     </nz-content>
-    <!-- @if (!(router.url.includes("register") || router.url.includes("login"))) {
-    <nz-footer [hidden]="">Ant Design ©2020 Implement By Angular</nz-footer>
-    } -->
   </nz-layout>
 </nz-layout>
