--- a/frontend/src/app/account/profile/profile.component.html
+++ b/frontend/src/app/account/profile/profile.component.html
@@ -11,6 +11,7 @@
   }
   @else {
     <nav class="flex space-x-3 mr-5">
+      <!-- <a routerLink="/items"  class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}><span nz-icon nzType="appstore" nzTheme="outline"></span><span>Items</span></a> -->
       <a routerLink="/login" routerLinkActive="active">Login</a>
       <a routerLink="/register" routerLinkActive="active">Register</a>
     </nav>
