--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, ipsum optio laborum suscipit fugiat, architecto veritatis velit sit odit magni, asperiores sequi necessitatibus et inventore ipsam pariatur minima? Dicta, quidem?
+    Doloremque assumenda provident aliquid porro, incidunt excepturi iste mollitia suscipit ea repellendus, nisi maxime nesciunt hic tenetur cumque reiciendis omnis cum quam. Omnis, doloremque laborum praesentium nihil et quia minima.
+    
+    
