--- a/frontend/src/app/layout/logo/logo.component.html
+++ b/frontend/src/app/layout/logo/logo.component.html
@@ -1,5 +1,5 @@
-<div class="flex h-full w-full items-center justify-center px-1 dark:text-white text-gray-700 hover:cursor-pointer" (click)="router.navigateByUrl('/')">
-    <svg version="1.0" class="flex-1" xmlns="http://www.w3.org/2000/svg"
+<span class="flex flex-1 items-center text-xl w-40  h-1/2  dark:text-white text-gray-700 hover:cursor-pointer" (click)="router.navigateByUrl('/')">
+    <svg version="1.0" class=" w-full sm:w-1/2 sm:flex-1" xmlns="http://www.w3.org/100/svg"
      viewBox="0 0 1000.000000 1000.000000"
     preserveAspectRatio="xMidYMid meet">
    
@@ -65,5 +65,5 @@
    <path d="M5010 2510 l-1 -200 146 0 145 0 0 34 0 35 -102 -1 -103 0 -3 166 -2
    166 -39 0 -39 0 -2 -200z"/>
    </g>
-   </svg> <h6 >Store Manager</h6>
-</div>
+   </svg> <h2 class="flex-1 invisible sm:visible" >Store Manager</h2>
+</span>
