--- a/frontend/src/app/item/item.component.html
+++ b/frontend/src/app/item/item.component.html
@@ -1,4 +1,4 @@
-<div class="h-full grid grid-rows-12 overflow-hidden">
+<div class="h-full  container mx-auto  grid grid-rows-12 overflow-hidden">
   <div
     class="row-span-1 row-start-1 px-4 rounded-t-md flex justify-between items-center"
   >
