--- a/frontend/src/app/layout/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/layout/nav-bar/nav-bar.component.html
@@ -1,14 +1,14 @@
-<nav>
-    <a routerLink="/home" class="flex space-x-2 items-center leading-5" routerLinkActive="active"  ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true} mat-fab aria-label="Example icon button with a add icon">
+<nav class="self-center">
+    <!-- <a routerLink="/home" class="flex space-x-2 items-center leading-5" routerLinkActive="active"  ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true} mat-fab aria-label="Example icon button with a add icon">
         
-        <span nz-icon nzType="home" nzTheme="outline"></span><span class="">Home</span>
-    </a>
-    <a routerLink="/items"  class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}><span nz-icon nzType="appstore" nzTheme="outline"></span><span>Items</span></a>
+        <span nz-icon nzType="home" nzTheme="outline"><span class="">Home
+    </a> -->
+    <a routerLink="/items"  class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>Items</a>
     @if (isAdmin()) {
-        <nz-tree [nzData]="nodes" (nzClick)="handleClic($event)" nzShowIcon nzBlockNode  [nzBeforeDrop]="beforeDrop"></nz-tree>
-        <!-- <a routerLink="/admin/users" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}><span nz-icon nzType="user" nzTheme="outline"></span><span>Users</span></a>
-        <a routerLink="/admin/users/admin" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}><span nz-icon nzType="user" nzTheme="outline"></span><span>Admin</span></a>
-        <a routerLink="/admin/users/guest" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}><span nz-icon nzType="user" nzTheme="outline"></span><span>Guest</span></a>
-        <a routerLink="/admin/users/user" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}><span nz-icon nzType="user" nzTheme="outline"></span><span>User</span></a> -->
+        <!-- <nz-tree [nzData]="nodes" (nzClick)="handleClic($event)" nzShowIcon nzBlockNode  [nzBeforeDrop]="beforeDrop"></nz-tree> -->
+        <a routerLink="/admin/users" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>Users</a>
+        <a routerLink="/admin/users/admin" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>Admin</a>
+        <a routerLink="/admin/users/guest" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>Guest</a>
+        <a routerLink="/admin/users/user" class="flex space-x-2 items-center leading-5" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>User</a>
     }
 </nav>
